--- a/apps/first_app/templates/packages.html
+++ b/apps/first_app/templates/packages.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title></title>
       {% load static %}
     <!-- The line above tells Django to be ready to listen for static files -->
     <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
     <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
     </head>
   <body>
-     <h1>About Page</h1>
+     <h1>Packages Page</h1>
   </body>
 </html>
