--- a/apps/first_app/templates/index.html
+++ b/apps/first_app/templates/index.html
@@ -6,10 +6,9 @@
       {% load static %}
     <!-- The line above tells Django to be ready to listen for static files -->
     <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
-    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
+    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->
     </head>
   <body>
-      <h1>Hello World!</h1>
-      {{email}} and {{name}}
+    <H1>index page</H1>
   </body>
 </html>
