--- a/apps/first_app/templates/packages.html
+++ b/apps/first_app/templates/packages.html
@@ -6,9 +6,10 @@
       {% load static %}
     <!-- The line above tells Django to be ready to listen for static files -->
     <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
-    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
+    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->
     </head>
   <body>
+    <h1>Testing Session: {{request.session.currentUser}} </h1> <!-- Testing session -Reuben-->
      <h1>Packages Page</h1>
   </body>
 </html>
