--- a/apps/first_app/templates/confirm.html
+++ b/apps/first_app/templates/confirm.html
@@ -3,22 +3,55 @@
   <head>
     <meta charset="utf-8">
     <title> confirm page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.23.0/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.23.0/js/paypal-checkout.min.js"></script>
     
     <!-- The line above tells Django to be ready to listen for static files -->
     <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
     </head>
   <body>
-    <form action="/pay" method="POST">
-        {% csrf_token %}
-        <script
-          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="{{ pub_key }}"
-          data-amount="1099"
-          data-name="Demo Site"
-          data-description="Widget"
-          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-          data-locale="auto">
-        </script>
-      </form>
+      <div id="paypal-button-container"></div>
+      
+      <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+      
+      <script>
+          paypal.Button.render({
+      
+              env: 'sandbox', // Or 'sandbox'
+      
+              client: {
+                  sandbox:    'AQVByr8uqG3nfpgnNXi-llq7dBMPOiqTtc_BOCp-PqU17s23OQGL6It9kG_tBOZhoRsH-RCKf5_gZrSx',
+                  production: 'xxxxxxxxx'
+              },
+      
+              commit: true, // Show a 'Pay Now' button
+      
+              payment: function(data, actions) {
+                  return actions.payment.create({
+                      payment: {
+                          transactions: [
+                              {
+                                  amount: { total: '0.01', currency: 'USD' }
+                              }
+                          ]
+                      }
+                  });
+              },
+      
+              onAuthorize: function(data, actions) {
+                  return actions.payment.execute().then(function(payment) {
+                      window.alert('payment Complete!')
+                      // The payment is complete!
+                      // You can now show a confirmation message to the customer
+                  
+                  });
+              }
+      
+          }, '#paypal-button-container');
+      </script>
+
   </body>
 </html>
