--- a/apps/first_app/templates/confirm.html
+++ b/apps/first_app/templates/confirm.html
@@ -13,6 +13,7 @@
     <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
     </head>
   <body>
+    <p>poop</p>
       <div id="paypal-button-container"></div>
       
       <script src="https://www.paypalobjects.com/api/checkout.js"></script>
