--- a/apps/first_app/templates/packagePricing.html
+++ b/apps/first_app/templates/packagePricing.html
@@ -7,15 +7,16 @@
     <meta name="author" content="">
 
     <title>Packages</title>
+    {% load static %}
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400|Prata" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
   </head>
 
     <body>
@@ -35,24 +36,24 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="index.html">Home
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="index">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach.html">Meet Your Coach</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing.html">Packages</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact">Contact</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="testimonials.html">Testimonials</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="cart.html">Cart</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="cart">Cart</a>
             </li>
           </ul>
         </div>
@@ -70,7 +71,7 @@
 
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="img/sunset.jpg" alt="">
+              <img class="card-img-top" src="{% static 'img/sunset.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">One Month<br>
                   <!-- Button HTML (to Trigger Modal) -->
@@ -82,7 +83,7 @@
 
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="fluid card-img-top" src="img/gohrhyyan.jpg" alt="">
+              <img class="fluid card-img-top" src="{% static 'img/gohrhyyan.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title">Three Months<br>
                   <!-- Button HTML (to Trigger Modal) -->
@@ -94,7 +95,7 @@
 
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="img/stevenlelham.jpg" alt="">
+              <img class="card-img-top" src="{% static 'img/stevenlelham.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Six Months<br>
                   <!-- Button HTML (to Trigger Modal) -->
@@ -198,9 +199,9 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/popper/popper.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 
   </body>
 </html>
