--- a/apps/first_app/templates/cartreview.html
+++ b/apps/first_app/templates/cartreview.html
@@ -5,8 +5,8 @@
     <title>About</title>
       {% load static %}
     <!-- The line above tells Django to be ready to listen for static files -->
-    <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
-    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" media="screen" title="no title"  charset="utf-8">
+    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->
     </head>
   <body>
      <h1>This is what you are ordering</h1>
