--- a/apps/first_app/templates/contact.html
+++ b/apps/first_app/templates/contact.html
@@ -1,15 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   <head>
+
     <meta charset="utf-8">
-    <title></title>
-      {% load static %}
-    <!-- The line above tells Django to be ready to listen for static files -->
-    <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
-    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
-    </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Contact</title>
+    {% load static %}
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Prata" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
+
+  </head>
+
   <body>
-    
-    <h1>Contact Page</h1>
+
+    <div class="div-light py-5" style="background-color: rgba(255, 255, 255, 0.8);">
+
+      <div style="color: rgba(30, 43, 138, 0.7)" class="my-7 tagline-upper text-center text-heading text-shadow d-none d-lg-block">Train With Wayne</div>
+
+      <div style="color: rgba(30, 43, 138, 0.7)" class="text-shadow tagline-lower text-center text-expanded text-uppercase  d-none d-lg-block"><br>Making running easy for beginners and veterans for over 30 years</div>
+
+    </div>
+
+    <br>
+
+    <!-- Navigation -->
+    <nav class="container navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
+      <div class="container">
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Train With Wayne</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item active px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="index">Home
+              </a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact">Contact
+              <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="cart">Cart</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="bg-faded p-4 my-4">
+        <hr class="divider">
+        <h2 class="text-center text-lg text-uppercase my-0">Got Questions?</h2>
+        <hr class="divider">
+
+          <h5 class="mb-4">Need some clarifications?<br><br>
+            Not sure if you're really cut out to be a runner? (You are!)<br><br>
+            Shoot an email <a style="text-decoration: underline;" href="mailto:helptrainbywayne@gmail.com">this way</a> and we can help you out.
+          </h5>
+
+      </div>
+    </div>
+    <!-- /.container -->
+
+    <footer class="bg-faded text-center py-5">
+      <div class="container">
+        <p class="m-0">Copyright &copy; Wayne Young 2017</p>
+      </div>
+    </footer>
+
+
+
+        <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/popper/popper.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+
   </body>
+
 </html>
