--- a/apps/first_app/templates/meetYourCoach.html
+++ b/apps/first_app/templates/meetYourCoach.html
@@ -9,15 +9,15 @@
     <meta name="author" content="">
 
     <title>Meet Your Coach</title>
-
+    {% load static %}
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Prata" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
 
   </head>
 
@@ -43,24 +43,24 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="index.html">Home
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="index">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach.html">Meet Your Coach</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing.html">Packages</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact">Contact</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="testimonials.html">Testimonials</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="cart.html">Cart</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="cart">Cart</a>
             </li>
           </ul>
         </div>
@@ -77,7 +77,7 @@
         <hr class="divider">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/slide-2.jpg" alt="">
+            <img class="img-fluid mb-4 mb-lg-0" src="{% static 'img/slide-2.jpg' %}" alt="">
           </div>
           <div class="col-lg-6">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
@@ -144,7 +144,7 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="{% static 'img/about/1.jpg' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -158,7 +158,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="{% static 'img/about/2.jpg' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -172,7 +172,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="{% static 'img/about/3.jpg' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -186,7 +186,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="{% static 'img/about/4.jpg' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -247,9 +247,9 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/popper/popper.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 
   </body>
 
