--- a/apps/first_app/templates/packageselection.html
+++ b/apps/first_app/templates/packageselection.html
@@ -5,9 +5,9 @@
     <title>Select Packages</title>
       {% load static %}
     <!-- The line above tells Django to be ready to listen for static files -->
-    <link rel="stylesheet" href="{% static 'ourApp/css/main.css' %}" media="screen" title="no title"  charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" media="screen" title="no title"  charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
+    <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->
     </head>
   <body>
      <h1>select packages</h1>
@@ -29,7 +29,7 @@
                     <input type="hidden" name="price" value="2.50">
                     <input type="submit" value="submit">
                 </form>
-    
+
         </div>
         <div class="col-md-4">
           <h1>Package 3 $3.50</h1>
@@ -38,7 +38,7 @@
                 <input type="hidden" name="price" value="3.50">
                 <input type="submit" vaue="submit">
             </form>
-        
+
          </div>
       </div>
 
