--- a/apps/first_app/templates/confirm.html
+++ b/apps/first_app/templates/confirm.html
@@ -35,7 +35,7 @@
                       payment: {
                           transactions: [
                               {
-                                  amount: { total: '0.01', currency: 'USD' }
+                                  amount: { total: "{{amount}}", currency: 'USD' }
                               }
                           ]
                       }
