--- a/apps/first_app/templates/cart.html
+++ b/apps/first_app/templates/cart.html
@@ -45,10 +45,10 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="about">Meet Your Coach</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packages">Packages</a>
+              <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
             </li>
             <li class="nav-item px-lg-4">
               <a style="color: rgba(30, 43, 138, 0.7)" class="text-shadow nav-link text-uppercase text-expanded" href="contact">Contact</a>
@@ -63,7 +63,61 @@
         </div>
       </div>
     </nav>
-
+    <div class="container">
+      <div class="bg-faded p-4 my-4">
+        <h6 style='color:red'>I still intend to beautify this. the struggle of python came back to me but i finally got it to do what i wanted - jordan</h6>
+        <!-- for loop runs through session cart and displays packages you have added and the total amount to be payed -->
+        {% for i in cart %}
+          {% if i == '1' %}
+            <h3>Package 1</h3>
+            Includes:
+            <ul>
+              <li>8 week get into shape for a 5k program</li>
+              <li>one 15-minute skype call a week</li>
+              <li>two email exchanges or text conversations a week</li>
+            </ul>
+          {% endif %}
+          {% if i == '2' %}
+            <h3>Package 2</h3>
+            Includes:
+            <ul>
+              <li>8 week get into shape for a 5k program</li>
+              <li>12 week plan for a 5k, 10k, or half marathon built around your life schedule</li>
+              <li>up to 30 minutes of skype calls per week</li>
+              <li>up to three email or text message conversations a week</li>
+              <li>video analysis of your running form</li>
+            </ul>
+          {% endif %}
+          {% if i == '3' %}
+            <h3>Package 3</h3>
+            Includes:
+            <ul>
+              <li>8 week get into shape for a 5k program</li>
+              <li>12-16 week plan for a 5k, 10k, or half marathon built around your life schedule</li>
+              <li>up to 45 minutes of skype calls per week</li>
+              <li>up to four email or text message conversations a week</li>
+              <li>video analysis of your running form</li>
+            </ul>
+          {% endif %}
+        {% endfor %}
+        {% if total > 0 %}
+          <h1>Total: {{total}}</h1>
+        {% endif %}
+        {% if total == 0 %}
+          <h1>Your cart is empty</h1>
+        {% endif %}
+        <!-- temporary button to clear session cart -->
+        <form action="/clearCart" method="POST">
+           {% csrf_token %}
+           <input type="submit" value="temporary session[cart] clear">
+        </form>
+        <!-- takes you to the payment (confirm?) page -->
+        <form action="/confirm" method="POST">
+          {% csrf_token %}
+          <button type="submit" name="button">Pay</button>
+        </form>
+      </div>
+    </div>
     <footer class="bg-faded text-center py-5">
       <div class="container">
         <p class="m-0">Copyright &copy; Wayne Young 2017</p>
