--- a/apps/first_app/templates/confirm.html
+++ b/apps/first_app/templates/confirm.html
@@ -14,6 +14,7 @@
     </head>
   <body>
     <p>poop</p>
+    <p>{{amount}}</p>
       <div id="paypal-button-container"></div>
 
       <script src="https://www.paypalobjects.com/api/checkout.js"></script>
