--- a/apps/first_app/templates/packagePricing.html
+++ b/apps/first_app/templates/packagePricing.html
@@ -17,6 +17,8 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
+
+    <script src="{% static 'js/packages.js' %}" type="text/javascript" ></script>
   </head>
 
     <body>
@@ -129,7 +131,11 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-secondary">Add to Cart</button>
+                    <form action="/addToCart" method="POST">
+                      {% csrf_token %}
+                      <input type="hidden" name="package" value="1">
+                      <button type="submit" class="btn btn-secondary hideButton" value="submit">Add to Cart</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -155,8 +161,12 @@
                   </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-secondary">Add to Cart</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <form action="/addToCart" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="package" value="2">
+                    <button type="submit" class="btn btn-secondary hideButton" value="submit">Add to Cart</button>
+                  </form>
                 </div>
             </div>
         </div>
@@ -182,8 +192,12 @@
                   </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-secondary">Add to Cart</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <form action="/addToCart" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="package" value="3">
+                    <button type="submit" class="btn btn-secondary hideButton" value="submit">Add to Cart</button>
+                  </form>
                 </div>
             </div>
         </div>
