--- a/apps/first_app/templates/index.html
+++ b/apps/first_app/templates/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="../css/business-casual.css">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
@@ -41,24 +42,24 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="index">Home
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: orange;" href="index">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="meetYourCoach">Meet Your Coach</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="packagePricing">Packages</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="contact">Contact</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="contact">Contact</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="testimonials">Testimonials</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="cart">Cart</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="cart">Cart</a>
             </li>
           </ul>
         </div>
@@ -75,20 +76,12 @@
         <div class="container">
           <h3 class="text-center">I've run over 40,000 miles since 1974.</h3>
           <br>
-          <h5 class="text-center" style="width: 100%">I'm a certified coach through USA Track and Field and the Road Runners Clubs of America. I began coaching at the high school level in 1987 and since then I've coached adults, kids, college athletes, my own children, and anyone else looking to become a runner.<br><br> I can help you achieve a healthier lifestyle through running. My specialty in coaching is taking non-runners and making them into runners and helping them to realize their potential. I can’t make you fast (that’s genetic), but I can make you faster. I can help you realize the health (physical and mental) benefits of being a runner. Running is not just about becoming a better runner, but also about becoming fitter, happier with who you are, taking care of yourself and sharing that positive outlook on life with others.</h5><br>
-            <h5 style="width: 110%;">
-          <ul>
-            <!-- <li>I started running from my brothers when I was 3 and organized running began in my early teens in 1973</li> -->
-            <li>I've run in 5 different decades over 44 years.</li>
-            <li>I've had very few lay-offs; I'm on my 3rd knee (one wore out) and within 17 lbs of my weight from 35 yrs ago.</li>
-            <li>I've competed in everything from 200 meter races all the way to the Boston Marathon (twice) and most distances in between.</li>
-            <li>I've run on 4 different continents in 15 different countries, in -18 Fahrenheit to 125 Fahrenheit temperatures. I've run in almost every kind of weather including falling snow on trails (which is my favorite).</li>
-          </ul></h5>
+          <h5 class="text-center" style="width: 100%">I'm a certified coach through USA Track and Field and the Road Runners Clubs of America. I began coaching at the high school level in 1987 and since then I've coached adults, kids, college athletes, my own children, and anyone else looking to become a runner.<br><br> I can help you achieve a healthier lifestyle through running. My specialty in coaching is taking non-runners and making them into runners and helping them to realize their potential. I can’t make you fast (that’s genetic), but I can make you faster. I can help you realize the health (physical and mental) benefits of being a runner. Running is not just about becoming a better runner, but also about becoming fitter, happier with who you are, taking care of yourself and sharing that positive outlook on life with others.<br><br>I've run in 5 different decades over 44 years. I've had very few lay-offs; I'm on my 3rd knee (one wore out) and within 17 lbs of my weight from 35 yrs ago. I've competed in everything from 200 meter races all the way to the Boston Marathon (twice) and most distances in between. I've run on 4 different continents in 15 different countries, in -18 Fahrenheit to 125 Fahrenheit temperatures. I've run in almost every kind of weather including falling snow on trails (which is my favorite).</h5>
         </div>
       </div>
   </div>
 
-      <div class="div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
+      <div class="container div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
         <hr class="divider">
         <h2 style="color: rgba(30, 43, 138, 0.9)" class="font-weight-bold text-center text-xl my-0">Check Out Packages</h2>
         <hr class="divider">
@@ -98,7 +91,7 @@
               <img class="card-img-top" src="{% static 'img/sunset.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">One Month<br>
-                  <small class="text-muted"><a href="packagePricing">Turn Over A New Leaf</a></small>
+                  <small class="text-muted">Turn Over A New Leaf</small>
                 </h4>
               </div>
             </div>
@@ -108,7 +101,7 @@
               <img class="fluid card-img-top" src="{% static 'img/gohrhyyan.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Three Months<br>
-                  <small class="text-muted"><a href="packagePricing">Enhance Your Fitness</a></small>
+                  <small class="text-muted">Enhance Your Fitness</small>
                 </h4>
               </div>
             </div>
@@ -118,16 +111,21 @@
               <img class="card-img-top" src="{% static 'img/stevenlelham.jpg' %}" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Six Months<br>
-                  <small class="text-muted"><a href="packagePricing">Change Your Life</a></small>
+                  <small class="text-muted">Change Your Life</small>
                 </h4>
               </div>
             </div>
           </div>
         </div>
+        <div class="container col-md-4 text-center">
+          <hr class="divider">
+          <a href="/packagePricing" role="button" class="btn btn-large btn-secondary">See More Details</a>
+          <hr class="divider">
+        </div>
       </div>
     <br>
 
-      <div class="div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
+      <div class="container div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
         <!-- Image Carousel -->
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
@@ -135,21 +133,21 @@
               <img class="rounded d-block img-fluid w-100" src="{% static 'img/walll.jpg' %}" alt="">
               <div class="carousel-caption d-none d-md-block">
               </div>
-              <h3 style="color: rgba(30, 43, 138, 0.9)" class="mt-3 text-center font-weight-bold">Running is for everyone.</h3>
+              <h3 style="color: rgba(30, 43, 138, 0.73); font-style: italic;" class="mt-3 text-center font-weight-bold">"Running is for everyone."</h3>
             </div>
 
             <div class="carousel-item">
               <img class="rounded d-block img-fluid w-100" src="{% static 'img/IMG_0017.jpg' %}" alt="">
               <div class="carousel-caption d-none d-md-block">
               </div>
-              <h3 style="color: rgba(30, 43, 138, 0.9)" class="mt-3 text-center font-weight-bold">Efficient running is controlled momentum.</h3>
+              <h3 style="color: rgba(30, 43, 138, 0.9); font-style: italic;" class="mt-3 text-center font-weight-bold">"Efficient running is controlled momentum."</h3>
             </div>
 
             <div class="carousel-item">
               <img class="rounded d-block img-fluid w-100" src="{% static 'img/students.jpg' %}" alt="">
               <div class="carousel-caption d-none d-md-block">
               </div>
-              <h3 style="color: rgba(30, 43, 138, 0.9)" class="mt-3 text-center font-weight-bold">You're a runner, you just don't know it yet.</h3>
+              <h3 style="color: rgba(30, 43, 138, 0.9); font-style: italic;" class="mt-3 text-center font-weight-bold">"You're a runner, you just don't know it yet."</h3>
             </div>
 
           </div>
@@ -166,7 +164,8 @@
     <!-- /.container -->
     <br>
 
-    <div class="div-light p-4 text-center" style="background-color: rgba(255, 255, 255, 0.9);">
+  <footer>
+    <div class="div-light p-4 text-center feet" style="background-color: rgba(255, 255, 255, 0.9);">
       <div class="container">
         <p class="m-0">Copyright &copy; Wayne Young 2017</p>
       </div>
