--- a/apps/first_app/templates/meetYourCoach.html
+++ b/apps/first_app/templates/meetYourCoach.html
@@ -41,109 +41,122 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item active px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="index">Home
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="index">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: orange;" href="meetYourCoach">Meet Your Coach</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="packagePricing">Packages</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="contact">Contact</a>
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="contact">Contact</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="testimonials">Testimonials</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="font-weight-bold nav-link text-uppercase text-expanded" href="cart">Cart</a>
+          <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="cart">Cart</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 <br>
-      <!-- About added timeline -->
-  <div class="container div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
-          <div class="col-lg-12 text-center">
-            <hr class="divider">
-            <h2 style="color: rgba(30, 43, 138, 0.9)" class="font-weight-bold text-center text-xl my-0">Get To Know Your Coach</h2>
-            <hr class="divider">
-          </div>
 
-        <div class="row">
-          <div class="col-lg-12">
-            <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'img/about/1.jpg' %}" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>1973</h4>
-                    <h4 class="subheading">Organized Running Begins</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'img/about/2.jpg' %}" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>1987-1990</h4>
-                    <h4 class="subheading">Coaching At High School Level</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'img/about/3.jpg' %}" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>1994-2010</h4>
-                    <h4 class="subheading">Coaching Adults</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'img/about/4.jpg' %}" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>2011-Present</h4>
-                    <h4 class="subheading">Coaching Adults and University Students</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <h4>Be Part
-                    <br>Of Our
-                    <br>Story!</h4>
-                </div>
-              </li>
-            </ul>
+      <!-- About added timeline -->
+      <div class="container div-light p-4" style="background-color: rgba(255, 255, 255, 0.9);">
+              <div class="col-lg-12 text-center">
+                <hr class="divider">
+                <h2 style="color: rgba(30, 43, 138, 0.9)" class="font-weight-bold text-center text-xl my-0">Get To Know Your Coach</h2>
+                <hr class="divider">
+              </div>
+
+              <div class="col-lg-12">
+                <ul class="timeline">
+                  <li>
+                    <div class="timeline-image">
+                      <img class="rounded-circle img-fluid" src="{% static 'img/about/1.jpg' %}" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h4>1974-1977</h4>
+                        <h4 class="subheading">Organized Running Begins</h4>
+                      </div>
+                      <div class="timeline-body">
+                        <p class="text-muted">I ran track in high school, where I established my best times of 4:32 and 51.3 in the mile and quarter mile, respectively.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="timeline-inverted">
+                    <div class="timeline-image">
+                      <img class="rounded-circle img-fluid" src="{% static 'img/about/2.jpg' %}" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h4>1980-1986</h4>
+                        <h4 class="subheading">Caught the Marathon Bug</h4>
+                      </div>
+                      <div class="timeline-body">
+                        <p class="text-muted">In 1980 I made my marathon debut at the Marine Corp Marathon with a time of 3:23. From 1983 to 1986 I competed in road races while in the Army and stationed in Hawaii with personal records of 16:22 for the 5k, 35:00 for the 10k, and 1:19 for the half marathon.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="timeline-image">
+                      <img class="rounded-circle img-fluid" src="{% static 'img/about/3.jpg' %}" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h4>1987-1990</h4>
+                        <h4 class="subheading">Coached At the High School Level</h4>
+                      </div>
+                      <div class="timeline-body">
+                        <p class="text-muted">I coached track and field at the high school level in Burlington, Massachusetts at Burlington High School. In 1988 I snuck in a marathon personal record at the Boston Peace Marathon, with a time of 3:03.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="timeline-inverted">
+                    <div class="timeline-image">
+                      <img class="rounded-circle img-fluid" src="{% static 'img/about/4.jpg' %}" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h4>1993-2010</h4>
+                        <h4 class="subheading">Michigan Living, Susan G. Komen Race for the Cure</h4>
+                      </div>
+                      <div class="timeline-body">
+                        <p class="text-muted">While living in Battle Creek, Michigan (Cereal City, USA!) I raised my three daughters and continued to run. I made a personal record at a 10-mile race with a time of 1:05. I started a Susan G. Komen Race for the Cure event in Battle Creek in 1996, and served as Race Chair and Director for 5 years. I was the first male Race Chairman in the country. I served on the local Komen Board of Directors from 1998 to 2004, and I represented all Komen Affiliates on the National Board of Directors in 1999. In my last year in Battle Creek, I worked as the director of the Cancer Care Center at Battle Creek Health Systems and was appointed a board member of the Michigan Cancer Consortium.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="timeline-inverted">
+                    <div class="timeline-image">
+                      <img class="rounded-circle img-fluid" src="{% static 'img/about/4.jpg' %}" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h4>2010-Present</h4>
+                        <h4 class="subheading">Abu Dhabi Calling</h4>
+                      </div>
+                      <div class="timeline-body">
+                        <p class="text-muted">In 2010 I moved to Abu Dhabi in the United Arab Emirates to work at New York University Abu Dhabi in the Department of Athletics. In 2012 I became a certified coach with USA Track and Field, Road Runners Clubs of America, and USA Triathlon. In 2016 I had a total knee replacement, but I continue to run with a recent time of 22:58 in the 5k at 58 years old. Overall I've completed 11 marathons over the years, qualifying for and running Boston twice at 40 and 50 years old.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="timeline-inverted">
+                    <div class="timeline-image">
+                      <h4>Let's Go
+                        <br>Running
+                        <br>Together!</h4>
+                    </div>
+                  </li>
+                </ul>
+              </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
 </div>
       <div class="bg-faded p-4 my-4 container">
@@ -176,8 +189,8 @@
       </table>
     </div>
 
-
-    <div class="div-light p-4 text-center" style="background-color: rgba(255, 255, 255, 0.9);">
+  <footer>
+    <div class="div-light p-4 text-center feet" style="background-color: rgba(255, 255, 255, 0.9);">
       <div class="container">
         <p class="m-0">Copyright &copy; Wayne Young 2017</p>
       </div>
