--- a/apps/first_app/templates/testimonials.html
+++ b/apps/first_app/templates/testimonials.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="../css/business-casual.css">
+
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
@@ -40,24 +42,24 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="index">Home
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="index">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="meetYourCoach">Meet Your Coach</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="meetYourCoach">Meet Your Coach</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="packagePricing">Packages</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="packagePricing">Packages</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="contact">Contact</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="contact">Contact</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="testimonials">Testimonials</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: orange;" href="testimonials">Testimonials</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="font-weight-bold nav-link text-uppercase text-expanded" href="cart">Cart</a>
+              <a class="font-weight-bold nav-link text-uppercase text-expanded" style="color: rgba(30, 43, 138, 0.9)" href="cart">Cart</a>
             </li>
           </ul>
         </div>
@@ -143,11 +145,12 @@
 <br>
 <br>
 <br>
-    <div class="div-light p-4 text-center" style="background-color: rgba(255, 255, 255, 0.9);">
+
+
+    <div class="div-light p-4 text-center feet" style="background-color: rgba(255, 255, 255, 0.9);">
       <div class="container">
         <p class="m-0">Copyright &copy; Wayne Young 2017</p>
       </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
