--- a/TrainByWayne-master/apps/first_app/static/css/business-casual.css
+++ b/TrainByWayne-master/apps/first_app/static/css/business-casual.css
@@ -4,8 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-business-casual/blob/master/LICENSE)
  */
 
-body {
-  font-family: 'Roboto', sans-serif;
+ body {
+  font-family: 'Prata', serif;
   font-family: 'Lato', sans-serif;
   background: url('../img/bground.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -15,8 +15,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, .text-heading {
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Prata', serif;
 }
 
 h1 {
@@ -160,3 +159,23 @@ hr.divider {
   .timeline .timeline-body > ul,
   .timeline .timeline-body > p {
     margin-bottom: 0; }
+
+
+    /* styling for the cart/ confirmation */
+    .confirm{
+      padding: 15rem 0;
+      background-color: white;
+    }
+
+    .row{
+      max-width:1140px;
+      margin: 0 auto;
+      /* height: 30vh; */
+    }
+    
+    .cart_title{
+      text-transform: uppercase;
+      display:block;
+      text-align: center;
+    }
+  
