--- a/TrainByWayne-master/apps/first_app/templates/cart3.html
+++ b/TrainByWayne-master/apps/first_app/templates/cart3.html
@@ -83,8 +83,10 @@
           <div class="col-md-6">
             <span class="package__price">Total: $300</span>
           </div>
-          <form action="confirm/300">
-            <input type="hidden" name="price" value"300">
+          <form action="confirm" method="post">
+              {% csrf_token %}
+            <input type="hidden" name="package_type" value="Three Months of Coaching">
+            <input type="hidden" name="price" value="300">
             <input type="submit">
           </form>
         </div>
